--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,1 +1,6 @@
 /* color palette from <https://github.com/vuejs/theme> */
+
+:root {
+    --course-table-header-name-fontsize: 20px;
+    --course-table-span-fontsize: 15px;
+}
